# mini_search_engine

./: .gitignore  README.md  WRITEUP.md
scripts/: mini-search-engine.service  scrape_all_domains.sh
search/: Cargo.toml  askama.toml
search/src/: index.rs  lib.rs  search.rs
search/src/html/static/: index.html  style.css  syntax.html
search/src/html/templates/: search.html  stats.html
spider/: __main__.py  domains.py
